# binver

./: .gitignore  .tarpaulin.toml  Cargo.toml  README.md  README.tpl
.github/: dependabot.yml
.github/workflows/: rust.yml
derive/: Cargo.toml
derive/src/: lib.rs
src/: config.rs  errors.rs  helpers.rs  implementations.rs  lib.rs  traits.rs
tests/: validate_blobs.rs  validate_enum.rs  validate_nested.rs  validate_struct.rs  validate_unnamed_enum.rs
