[package]
name = "binver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.semver]
version = "1.0"
default-features = false

[dependencies.lazy_static]
version = "1.4"
default-features = false

[dependencies.binver_derive]
path = "derive"
