[package]
name = "binver"
version = "0.1.0"
edition = "2018"
authors = ["Trangar"]
license = "MIT OR Apache-2.0"
description = "Binary (de)serialization framework that is backwards compatible with versioned fields."
repository = "https://github.com/trangar/binver"

[features]
default = ["std"]
std = []

[dependencies.semver]
version = "1.0"
default-features = false

[dependencies.lazy_static]
version = "1.4"
default-features = false

[dependencies.binver_derive]
version = "0.1.0"
