[package]
name = "binver_derive"
version = "0.1.0"
edition = "2018"
authors = ["Trangar"]
license = "MIT OR Apache-2.0"
description = "derive for binver"
repository = "https://github.com/trangar/binver"

[lib]
proc-macro = true

[dependencies]
semver = "1.0"
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "1.0"
default-features = false
features = ["derive", "parsing", "printing", "extra-traits"]
